style fix slightly smaller greeting on different screen widths to prevent it from overflowing

--- a/styles/style_summary.css
+++ b/styles/style_summary.css
@@ -202,14 +202,31 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1300px) {
+  .summary_main {
+    padding-left: 64px;
+  }
   .greeting {
-    font-size: 37px;
-    margin-left: 24px;
+    font-size: 36px;
+    margin-left: 30px;
   }
 
   .greeting_name {
     font-size: 54px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .summary_main {
+    padding-left: 54px;
+  }
+  .greeting {
+    font-size: 28px;
+    margin-left: 20px;
+  }
+
+  .greeting_name {
+    font-size: 44px;
   }
 }
 
